[package]
name = "DCSR"
version = "0.0.2"
edition = "2021"
authors = ["Cat"]
description = "A small webview window for previewing a doc."
license = "MIT"
documentation = "github.com/Vova-max-png/DCSR"
repository = "github.com/Vova-max-png/DCSR"
categories = "Command line utilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
glfw = "0.51.0"
wry = "0.27.0"
