[package]
name = "DCSR"
version = "0.0.4"
edition = "2021"
authors = ["Cat"]
description = "A small webview window for previewing a doc."
license = "MIT"
documentation = "https://github.com/Vova-max-png/DCSR"
repository = "https://github.com/Vova-max-png/DCSR"
categories = ["Command line utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
wry = "0.27.0"
